added some images

--- a/index.html
+++ b/index.html
@@ -29,39 +29,36 @@
     <section id="galería" class="galeria hidden">
         <ul id="categorias-galeria">
             <li> <span>Grafito</span><img
-                    src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/1adb79f6164b49e98ea398cd7e8ea87d_1625859387~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=70025&refresh_token=81ed4462a6b2ac42dbd154c4e733b9b7&x-expires=1735545600&x-signature=DO7qbTnu8alspg%2FrnjXVp6ELhhg%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                    alt="">
+                    src="/imagenes/chavo.jpg"
+                    alt="grafito">
             </li>
 
             <li> <span>Bolígrafo</span><img
-                    src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/b8193fc75a044b8d986f857a2a03a110~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=16489&refresh_token=4f45217e950e730bee86e410cd0d284f&x-expires=1735545600&x-signature=C0df%2FNIVXWtOHSzg5YTOee2FqAE%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                    alt="">
+                    src="/imagenes/monja.jpg"
+                    alt="Bolígrafo">
             </li>
 
             <li><span>Digital</span><img
                     src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/462223148_527421016900787_433287621512841719_n.png?stp=dst-webp&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=UZEAJVgLtbsQ7kNvgFv-LLY&_nc_ht=scontent-iad3-1.xx&_nc_gid=AqKgrRuvgYyg8qTozzpZb7i&oh=00_AYCTUa5MqETFZDXn1Xpdtn4RBELztpcH4c6jsVDuIEKKEQ&oe=67758697"
-                    alt="">
+                    alt="Digital">
             </li>
             <li><span>Tatuajes</span><img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThkq4si02a_CuF8h30yt6lxQSc_UuVMo604w&s"
-                    alt="">
+                    alt="Tatuajes">
             </li>
         </ul>
 
 
         <div id="galeria-grafito" class="galeria-grid hidden">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/eaea488c67674a62bb7daa175bdd450f_1621696770~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=9813&refresh_token=c082a9dba91bc5f1cc8a20a3aa7f71b7&x-expires=1735545600&x-signature=dfWnyorAoP31KSw5UE7j2yy01mc%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
+            <img src="/imagenes/HenryCavill.jpg"
                 alt="Henry Cavill. A4. 2022. Disponible">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/8db0586414204ab3811f1bed25707e8e~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=79915&refresh_token=2e1d5b6be082c38570e45887d466b620&x-expires=1735545600&x-signature=3vQU87Kz9AZcOEQDv0wlbafaY0g%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                alt="">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/1adb79f6164b49e98ea398cd7e8ea87d_1625859387~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=70025&refresh_token=81ed4462a6b2ac42dbd154c4e733b9b7&x-expires=1735545600&x-signature=DO7qbTnu8alspg%2FrnjXVp6ELhhg%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
+            <img src="/imagenes/chavo.jpg"
                 alt="El Chavo del 8. A4. 2022. Disponible">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/ce7259af3fa84b05ad3db127cb5af1a8_1634010727~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=51790&refresh_token=5db088d1e21c59e33c1e14889e3c47d9&x-expires=1735545600&x-signature=AG%2FYxEzVi4j3AG2aKcjVAX5BBfo%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                alt="">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/8dbc0959e1394ec59bfe2f2909db7692_1681961394~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=7812&refresh_token=103e820654c908ae07f7e86abfc7531b&x-expires=1735545600&x-signature=Rf%2BmmcsTHG96xmv8UI80JJgfjzM%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                alt="">
-            <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-p-0068/be24b85ee6f04ef784fbc45aed592c35_1718229299~tplv-tiktokx-cropcenter-q:300:400:q72.jpeg?dr=14782&nonce=79769&refresh_token=906a97a63242b4caf5b0d4a68178cf37&x-expires=1735545600&x-signature=cXLniWTxC4%2FXfF01ifiN90oXtHU%3D&biz_tag=tt_video&idc=maliva&ps=933b5bde&s=PUBLISH&sc=cover&shcp=132edbea&shp=d05b14bd&t=bacd0480"
-                alt="">
+            <img src="/imagenes/EmmaStone.jpg"
+                alt="Emma Stone. A4. 2022. Disponible">
+            <img src="/imagenes/ElizabethOlsen.jpg"
+                alt="Elizabeth Olsen. A4. 2022. Disponible">
+            <img src="imagenes/rex.jpg" alt="Rex, encargo. A4. 2022. No Disponible.">
         </div>
 
         <div id="galeria-bolígrafo" class="galeria-grid hidden">
